# MLCV

./: .gitignore  CMakeLists.txt  MlcvConfig.h.in  README.md  main.cpp
ActivationFunction/: ActivationFunction.cpp  ActivationFunction.h  CMakeLists.txt
DataReader/: CMakeLists.txt  DataReader.cpp  DataReader.h
Filter/: CMakeLists.txt  Filter.cpp  Filter.h
Image/: CMakeLists.txt  Image.cpp  Image.h
Layer/: CMakeLists.txt  Layer.cpp  Layer.h
LayerManager/: CMakeLists.txt  LayerManager.cpp  LayerManager.h
PythonImplementations/: DenseNet.py  InceptionResNet.py  InceptionV4.py  SqueezeNet.py  main.py  utils.py
PythonImplementations/ResNet/: main.py
PythonImplementations/ResNet/resnet_pytorch/: model.py
PythonImplementations/VGG/: main.py
PythonImplementations/VGG/vgg_pytorch/: __init__.py  model.py  utils.py
Tool/: CMakeLists.txt  Def.cpp  Defs.h
lodepng/: CMakeLists.txt  lodepng.cpp  lodepng.h
