cmake_minimum_required(VERSION 3.0.0)
project(MLCV VERSION 0.1.0)

configure_file(MlcvConfig.h.in MlcvConfig.h)

include(CTest)
enable_testing()

add_subdirectory(Tool)
add_subdirectory(lodepng)
add_subdirectory(DataReader)
add_subdirectory(LayerManager)
add_subdirectory(Layer)
add_subdirectory(ActivationFunction)
add_subdirectory(Filter)
add_subdirectory(Image)

add_executable(MLCV main.cpp)

target_link_libraries(MLCV PUBLIC Tool)
target_link_libraries(MLCV PUBLIC lodepng)
target_link_libraries(MLCV PUBLIC DataReader)
target_link_libraries(MLCV PUBLIC LayerManager)
target_link_libraries(MLCV PUBLIC Layer)
target_link_libraries(MLCV PUBLIC ActivationFunction)
target_link_libraries(MLCV PUBLIC Filter)
target_link_libraries(MLCV PUBLIC Image)
target_include_directories(MLCV PUBLIC "${PROJECT_BINARY_DIR}/${PROJECT_SOURCE_DIR}/DataReader")
target_include_directories(MLCV PUBLIC "${PROJECT_BINARY_DIR}/${PROJECT_SOURCE_DIR}/LayerManager")
target_include_directories(MLCV PUBLIC "${PROJECT_BINARY_DIR}/${PROJECT_SOURCE_DIR}/Layer")
target_include_directories(MLCV PUBLIC "${PROJECT_BINARY_DIR}/${PROJECT_SOURCE_DIR}/ActivationFunction")
target_include_directories(MLCV PUBLIC "${PROJECT_BINARY_DIR}/${PROJECT_SOURCE_DIR}/Filter")
target_include_directories(MLCV PUBLIC "${PROJECT_BINARY_DIR}/${PROJECT_SOURCE_DIR}/Image")
target_include_directories(MLCV PUBLIC "${CMAKE_SOURCE_DIR}/DataReader")
target_include_directories(MLCV PUBLIC "${CMAKE_SOURCE_DIR}/Layer")
target_include_directories(MLCV PUBLIC "${CMAKE_SOURCE_DIR}/Image")
target_include_directories(MLCV PUBLIC "${PROJECT_BINARY_DIR}")

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED True)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)

install(TARGETS MLCV DESTINATION bin)
install(FILES "${PROJECT_BINARY_DIR}/MlcvConfig.h" DESTINATION include)